# planertia

./: .gitignore  LICENSE  pyproject.toml
backend/: settings.py  urls.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_initial.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/: app.css
frontend/app/routes/: home.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: Card.tsx
frontend/src/components/dashboard/: CalendarCard.tsx  MemoCard.tsx  TaskCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Navigation.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: axios.ts
frontend/src/pages/: Categories.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Memos.tsx  Mypage.tsx  Signup.tsx  Tasks.tsx
memos/: models.py  serializers.py  urls.py  views.py
memos/migrations/: 0001_initial.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
